--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <input type="text" id="name">
         </div>
         <div>
-            <label for="">Gender</label>
+            <label>Gender:</label>
             <label for="male">Male</label>
             <input type="radio" name="gender" id="male" value="Male">
             <label for="female">Female</label>
